@@ -6,7 +6,14 @@ The very fast start
     ii) cd tiny-tools-NNNN.NNNN
     iii) run make process
 	make all
-    iv) install
+    iv) run make install process
 	make install		
 
+2. Insatall ecf
 
+    i) Unpack ecf-0.0.3.tar.bz
+    ii) cd ecf-0.0.3
+    iii) run make process
+	make all
+    iv) run make install process
+	make install		
